kubernetes/environment/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-keycloak-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.enzhine.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
  tls:
    - hosts:
        - keycloak.enzhine.ru
      secretName: wildcard-enzhine-ru-tls
